--- a/spark-streaming/pom.xml
+++ b/spark-streaming/pom.xml
@@ -9,17 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spark-sql</artifactId>
+    <artifactId>spark-streaming</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.11</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.11</artifactId>
+            <artifactId>spark-streaming_2.11</artifactId>
             <version>2.1.1</version>
         </dependency>
     </dependencies>
